[fix][dingo-calcite] Fix document index